# Waveform-Viewer

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README_ZH.md  build-cf.sh  index.html  test.view  trace.view  wrangler.jsonc
.github/workflows/: deploy.yml  release.yml
assets/: index-9Ypqxg5-.js  index-B9bPDb-c.js  index-B9fc7S3n.css  index-BN82axM8.js  index-BcpfFNV6.css  index-BegdIvcI.css  index-BpjjHViK.js  index-C2QUPcg4.js  index-C2w8fu3z.js  index-CN1q0-fP.js  index-CX2UZtEP.js  index-Cs38mHL6.js  index-CxVf5Lja.js  index-D74rRuGw.js  index-DMYfyKAt.js  index-DNL3ugEj.js  index-D_3p4u1e.css  index-DgRRxHSC.css  index-DjveIw1K.css  index-Jp3IlyfW.js  index-_EA-oP-9.js  index-lKEYHyql.js  index-qcZfJVk5.js  index-xx5SdT3m.js  vcdWorker-B7HJolc2.js  waveformWorker-BM6IQnnD.js  waveformWorker-D6WV3WLh.js  waveformWorker-f7wAoa2n.js
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  WaveformCanvas.tsx
frontend/src/hooks/: useAppContext.tsx
frontend/src/plugins/: coreFloatPlugin.ts  coreRadixPlugin.ts
frontend/src/types/: plugin.ts  vcd.ts
frontend/src/utils/: chisel.ts  format.ts
frontend/src/wasm/: vcdService.ts
include/: fst_parser.h  lod_manager.h  vcd_parser.h  waveform_parser.h
plugins/: PrismData.js  reversehex.js
src/: fst_parser.cpp  lod_manager.cpp  main.cpp  vcd_parser.cpp  wasm_bindings.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
tests/: gen_large_vcd.py
wasm/: example.html  vcd_parser.d.ts  vcd_parser.js  vcd_parser.wasm
